# ExamGPT

./: .env.example  .gitignore  LICENSE  README.md  chat_server.py  cli.py  main.py  pyproject.toml
examgpt/ai/: aimodel.py  base.py  constants.py  prompts.json  prompts.py  prompts.yaml
examgpt/ai/model/: llama.py  llama3.py  openai.py
examgpt/ai/model_providers/: gemini.py  llama.py  openai.py
examgpt/ai/models/: base.py  openai.py
examgpt/ai/openai/: model.py  openai.py
examgpt/core/: config.py  events.py  exam.py  exceptions.py  question.py  sources.py
examgpt/frontend/: chat_helper.py  cli_helper.py
examgpt/frontend/chatbot/: README.md  chat_helper.py  chat_server.py
examgpt/frontend/telegram_bot.py/: chat.py
examgpt/sources/chunkers/: base.py  pdf_chunker.py  textchunk.py
examgpt/sources/filetypes/: base.py  pdf.py
examgpt/storage/: base.py  files.py
examgpt/utils/: checkpoint.py  checkpoint_old.py  misc.py
