[tool.poetry]
name = "examgpt"
version = "0.1.0"
description = ""
authors = ["Rajesh Korde <rajesh.korde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
unstructured = {extras = ["local-inference"], version = "^0.14.2"}
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
python-telegram-bot = "^21.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
